# ctx

./: .gitignore  CONTRIBUTING.md  README.md
.github/ISSUE_TEMPLATE/: config.yml  topic.yml
.github/workflows/: ci.yml  deploy.yml  generate.yml  publish.yml  review.yml  triage-topic.yml
docs/superpowers/plans/: 2026-06-10-daily-journal-mvp.md  2026-06-11-writer-reviewer-agents.md
docs/superpowers/specs/: 2026-06-10-daily-journal-mvp-design.md  2026-06-11-writer-reviewer-agents-design.md
generator/: package-lock.json  package.json  pyproject.toml
generator/src/article_generator/: article.py  config.py  github.py  github_client.py  github_drafts.py  github_issues.py  github_prs.py  graph.py  llm.py  main.py  pipeline.py  prompt.py  prompts.py  review.py  tag_curator.py  triage.py
generator/src/article_generator/agents/: __init__.py  common.py  reviewer.py  tag_curator.py  triage.py  writer.py
generator/src/article_generator/system_prompts/: reviewer.txt  triage.txt  writer.txt
generator/src/ctx_generator/: github_issues.py  main.py
generator/src/daily_journal_generator/: article.py  github_issues.py  llm.py  main.py  prompts.py
generator/tests/: test_article.py  test_config.py  test_github.py  test_github_drafts.py  test_github_issues.py  test_github_prs.py  test_graph.py  test_llm.py  test_main.py  test_prompts.py  test_review.py  test_tag_curator.py  test_triage.py
site/: astro.config.mjs  package-lock.json  package.json
site/src/: consts.ts  content.config.ts
site/src/components/: ArticleHeader.astro  ArticleList.astro  BaseHead.astro  FeaturedArticle.astro  Footer.astro  Header.astro  HeaderLink.astro  HomeActivity.astro  HomeHero.astro  Quiz.astro  ReadingStreak.astro  TopicQueue.astro
site/src/content/blog/: 2026-06-10-bienvenida.md  2026-06-11-kafka-sin-zookeeper-kraft.md  (+19 more)
site/src/data/: tags.json
site/src/layouts/: BlogPost.astro  Page.astro
site/src/pages/: 404.astro  articles.astro  como-funciona.astro  how-it-works.astro  index.astro  rss.xml.js
site/src/styles/: global.css
site/src/utils/: reading-time.ts  reading.test.ts  reading.ts
(+3 files in other folders)
