[project]
name = "article-generator"
version = "0.1.0"
description = "Generates the daily deep-dive article from the topic queue"
requires-python = ">=3.11"
dependencies = ["requests>=2.31"]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.8"]

[project.scripts]
generate-article = "article_generator.main:main"
review-article = "article_generator.review:main"
triage-topic = "article_generator.triage:main"
curate-tags = "article_generator.tag_curator:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
