[project]
name = "article-generator"
version = "0.1.0"
description = "Generates the daily deep-dive article from the topic queue"
requires-python = ">=3.11"
dependencies = ["requests>=2.31"]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.8"]

[project.scripts]
generate-article = "article_generator.agents.writer:main"
review-article = "article_generator.agents.reviewer:main"
triage-topic = "article_generator.agents.triage:main"
curate-tags = "article_generator.agents.tag_curator:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
