[project]
name = "article-generator"
version = "0.1.0"
description = "Generates the daily deep-dive article from the topic queue"
requires-python = ">=3.11"
dependencies = ["requests>=2.31"]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.8"]

[project.scripts]
publish-article = "article_generator.pipeline:main"
triage-topic = "article_generator.pipeline:triage_main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
article_generator = ["system_prompts/*.txt"]

[tool.ruff]
line-length = 100
